--- a/integrations/mongodb_atlas/pyproject.toml
+++ b/integrations/mongodb_atlas/pyproject.toml
@@ -39,7 +39,7 @@ packages = ["src/haystack_integrations"]
 
 [tool.hatch.version]
 source = "vcs"
-tag-pattern = 'integrations\/pgmongodb-atlasvector-v(?P<version>.*)'
+tag-pattern = 'integrations\/mongodb-atlas-v(?P<version>.*)'
 
 [tool.hatch.version.raw-options]
 root = "../.."
