--- a/integrations/astra/pyproject.toml
+++ b/integrations/astra/pyproject.toml
@@ -52,7 +52,7 @@ dependencies = [
   "coverage[toml]>=6.5",
   "pytest",
   "haystack-pydoc-tools",
-  "astrapy",
+  "astrapy>=0.7.0",
 ]
 [tool.hatch.envs.default.scripts]
 test = "pytest {args:tests}"
@@ -77,6 +77,7 @@ dependencies = [
   "black>=23.1.0",
   "mypy>=1.0.0",
   "ruff>=0.0.243",
+  "astrapy>=0.7.0",
 ]
 [tool.hatch.envs.lint.scripts]
 typing = "mypy --install-types --non-interactive --explicit-package-bases {args:src/ tests}"
@@ -187,6 +188,7 @@ markers = [
 [[tool.mypy.overrides]]
 module = [
   "astra_client.*",
+  "astrapy.*",
   "pydantic.*",
   "haystack.*",
   "haystack_integrations.*",
