--- a/.github/workflows/ollama.yml
+++ b/.github/workflows/ollama.yml
@@ -10,6 +10,10 @@ on:
       - "integrations/ollama/**"
       - ".github/workflows/ollama.yml"
 
+defaults:
+  run:
+    working-directory: integrations/unstructured
+
 concurrency:
   group: ollama-${{ github.head_ref }}
   cancel-in-progress: true
