adding mypy overrides for boto

--- a/integrations/amazon_sagemaker/pyproject.toml
+++ b/integrations/amazon_sagemaker/pyproject.toml
@@ -169,12 +169,15 @@ exclude_lines = [
 
 [[tool.mypy.overrides]]
 module = [
+  "botocore.*",
+  "boto3.*",
   "haystack.*",
   "haystack_integrations.*",
   "pytest.*",
   "numpy.*",
 ]
 ignore_missing_imports = true
+
 
 
 [tool.pytest.ini_options]
