Adopt Secret to Amazon Bedrock (#416)
* initial import

* addin Secret and fixing tests

* cleaning

* using staticmethod directly

* removing ignore from B008 config and setting up in-line

* addin Secret and fixing tests for chat component

* addin Secret and fixing tests for the chat component

* fixing to_dict from_dict

* fixing to_dict from_dict to the chat component as well

--- a/integrations/amazon_bedrock/pyproject.toml
+++ b/integrations/amazon_bedrock/pyproject.toml
@@ -83,11 +83,13 @@ style = [
   "ruff {args:.}",
   "black --check --diff {args:.}",
 ]
+
 fmt = [
   "black {args:.}",
   "ruff --fix {args:.}",
   "style",
 ]
+
 all = [
   "style",
   "typing",
@@ -135,7 +137,7 @@ ignore = [
   # Ignore complexity
   "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
   # Ignore unused params
-  "ARG001", "ARG002", "ARG005"
+  "ARG001", "ARG002", "ARG005",
 ]
 unfixable = [
   # Don't touch unused imports
@@ -153,16 +155,13 @@ ban-relative-imports = "parents"
 "tests/**/*" = ["PLR2004", "S101", "TID252"]
 
 [tool.coverage.run]
-source_pkgs = ["src", "tests"]
+source = ["haystack_integrations"]
 branch = true
 parallel = true
 
-
-[tool.coverage.paths]
-amazon_bedrock_haystack = ["src/*"]
-tests = ["tests"]
-
 [tool.coverage.report]
+omit = ["*/tests/*", "*/__init__.py"]
+show_missing=true
 exclude_lines = [
   "no cov",
   "if __name__ == .__main__.:",
