--- a/.github/workflows/mistral.yml
+++ b/.github/workflows/mistral.yml
@@ -51,7 +51,11 @@ jobs:
 
       - name: Lint
         if: matrix.python-version == '3.9' && runner.os == 'Linux'
-        run: hatch run lint:all
+        run: hatch run lint:all\
+      
+      - name: Generate docs
+        if: matrix.python-version == '3.9' && runner.os == 'Linux'
+        run: hatch run docs
 
       - name: Run tests
         run: hatch run cov
