Updated integration tests workflow to set global working directory

--- a/.github/workflows/ollama.yml
+++ b/.github/workflows/ollama.yml
@@ -12,7 +12,7 @@ on:
 
 defaults:
   run:
-    working-directory: integrations/unstructured
+    working-directory: integrations/ollama
 
 concurrency:
   group: ollama-${{ github.head_ref }}
