--- a/.github/workflows/unstructured.yml
+++ b/.github/workflows/unstructured.yml
@@ -34,6 +34,7 @@ jobs:
 
     steps:
       - name: Free up disk space
+        working-directory: .
         run: |
           sudo docker image prune --all --force
 
