--- a/.github/workflows/ollama.yml
+++ b/.github/workflows/ollama.yml
@@ -10,6 +10,10 @@ on:
       - "integrations/ollama/**"
       - ".github/workflows/ollama.yml"
 
+defaults:
+  run:
+    working-directory: integrations/ollama
+
 concurrency:
   group: ollama-${{ github.head_ref }}
   cancel-in-progress: true
@@ -47,7 +51,6 @@ jobs:
         run: pip install --upgrade hatch
 
       - name: Lint
-        working-directory: integrations/ollama
         if: matrix.python-version == '3.9'
         run: hatch run lint:all
 
@@ -55,10 +58,8 @@ jobs:
         run: docker exec ollama ollama pull ${{ env.LLM_FOR_TESTS }}        
 
       - name: Generate docs
-        working-directory: integrations/ollama
         if: matrix.python-version == '3.9' && runner.os == 'Linux'
         run: hatch run docs
 
       - name: Run tests
-        working-directory: integrations/ollama
         run: hatch run cov
