docs: update category slug

--- a/integrations/amazon_bedrock/pydoc/config.yml
+++ b/integrations/amazon_bedrock/pydoc/config.yml
@@ -19,7 +19,7 @@ processors:
 renderer:
   type: haystack_pydoc_tools.renderers.ReadmePreviewRenderer
   excerpt: Amazon Bedrock integration for Haystack
-  category_slug: haystack-integrations
+  category_slug: integrations-api
   title: Amazon Bedrock
   slug: integrations-amazon-bedrock
   order: 10
