--- a/integrations/ollama/pydoc/config.yml
+++ b/integrations/ollama/pydoc/config.yml
@@ -17,7 +17,7 @@ processors:
 renderer:
   type: haystack_pydoc_tools.renderers.ReadmePreviewRenderer
   excerpt: Ollama integration for Haystack
-  category_slug: haystack-integrations
+  category_slug: integrations-api
   title: Ollama
   slug: integrations-ollama
   order: 120
