--- a/integrations/qdrant/pydoc/config.yml
+++ b/integrations/qdrant/pydoc/config.yml
@@ -20,7 +20,7 @@ processors:
 renderer:
   type: haystack_pydoc_tools.renderers.ReadmePreviewRenderer
   excerpt: Qdrant integration for Haystack
-  category_slug: haystack-integrations
+  category_slug: integrations-api
   title: Qdrant
   slug: integrations-qdrant
   order: 160
