--- a/integrations/deepeval/pydoc/config.yml
+++ b/integrations/deepeval/pydoc/config.yml
@@ -20,7 +20,7 @@ processors:
 renderer:
   type: haystack_pydoc_tools.renderers.ReadmePreviewRenderer
   excerpt: DeepEval integration for Haystack
-  category_slug: haystack-integrations
+  category_slug: integrations-api
   title: DeepEval
   slug: integrations-deepeval
   order: 45
