--- a/integrations/google_vertex/pydoc/config.yml
+++ b/integrations/google_vertex/pydoc/config.yml
@@ -22,7 +22,7 @@ processors:
 renderer:
   type: haystack_pydoc_tools.renderers.ReadmePreviewRenderer
   excerpt: Google Vertex integration for Haystack
-  category_slug: haystack-integrations
+  category_slug: integrations-api
   title: Google Vertex
   slug: integrations-google-vertex
   order: 70
