--- a/integrations/jina/pydoc/config.yml
+++ b/integrations/jina/pydoc/config.yml
@@ -18,7 +18,7 @@ processors:
 renderer:
   type: haystack_pydoc_tools.renderers.ReadmePreviewRenderer
   excerpt: Jina integration for Haystack
-  category_slug: haystack-integrations
+  category_slug: integrations-api
   title: Jina
   slug: integrations-jina
   order: 1
