--- a/integrations/llama_cpp/pydoc/config.yml
+++ b/integrations/llama_cpp/pydoc/config.yml
@@ -16,7 +16,7 @@ processors:
 renderer:
   type: haystack_pydoc_tools.renderers.ReadmePreviewRenderer
   excerpt: Llama.cpp integration for Haystack
-  category_slug: haystack-integrations
+  category_slug: integrations-api
   title: Llama.cpp
   slug: integrations-llama-cpp
   order: 110
