--- a/integrations/mongodb_atlas/pydoc/config.yml
+++ b/integrations/mongodb_atlas/pydoc/config.yml
@@ -17,7 +17,7 @@ processors:
 renderer:
   type: haystack_pydoc_tools.renderers.ReadmePreviewRenderer
   excerpt: MongoDB Atlas integration for Haystack
-  category_slug: haystack-integrations
+  category_slug: integrations-api
   title: MongoDB Atlas
   slug: integrations-mongodb-atlas
   order: 140
