--- a/integrations/weaviate/pydoc/config.yml
+++ b/integrations/weaviate/pydoc/config.yml
@@ -20,7 +20,7 @@ processors:
 renderer:
   type: haystack_pydoc_tools.renderers.ReadmePreviewRenderer
   excerpt: Weaviate integration for Haystack
-  category_slug: haystack-integrations
+  category_slug: integrations-api
   title: Weaviate
   slug: integrations-weaviate
   order: 180
