docs - clean up hatch env after docs generation

--- a/.github/workflows/CI_readme_sync.yml
+++ b/.github/workflows/CI_readme_sync.yml
@@ -49,6 +49,7 @@ jobs:
           for d in $ALL_CHANGED_DIRS; do
             cd $d
             hatch run docs
+            hatch env prune # clean up the environment after docs generation
             cd -
           done
           mkdir tmp
