Update the Astra DB Integration to fit latest conventions (#428)
* FIX: use standard astra naming conventions for env vars

* Further astra integration updates

* Fix linting

* Fix for black linting as well

* Fix issues, add dep

* Update pyproject.toml

* Update test_retriever.py

* Update astra.yml

* Address feedback in review

--- a/integrations/astra/pyproject.toml
+++ b/integrations/astra/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
   "haystack-ai",
   "pydantic",
   "typing_extensions",
+  "astrapy",
 ]
 
 [project.urls]
@@ -185,6 +186,7 @@ markers = [
 [[tool.mypy.overrides]]
 module = [
   "astra_client.*",
+  "astrapy.*",
   "pydantic.*",
   "haystack.*",
   "haystack_integrations.*",
