fix pydoc config

--- a/integrations/amazon_bedrock/pydoc/config.yml
+++ b/integrations/amazon_bedrock/pydoc/config.yml
@@ -4,7 +4,7 @@ loaders:
     modules: [
       "haystack_integrations.components.generators.amazon_bedrock.generator",
       "haystack_integrations.components.generators.amazon_bedrock.adapters",
-      "haystack_integrations.components.generators.amazon_bedrock.errors",
+      "haystack_integrations.common.amazon_bedrock.errors",
       "haystack_integrations.components.generators.amazon_bedrock.handlers",
     ]
     ignore_when_discovered: ["__init__"]
