--- a/integrations/optimum/pydoc/config.yml
+++ b/integrations/optimum/pydoc/config.yml
@@ -20,7 +20,7 @@ processors:
 renderer:
   type: haystack_pydoc_tools.renderers.ReadmePreviewRenderer
   excerpt: Optimum integration for Haystack
-  category_slug: haystack-integrations
+  category_slug: integrations-api
   title: Optimum
   slug: integrations-optimum
   order: 185
