feat: Add Optimum Embedders (#379)
* Add Optimum Embedders

* Add CI workflow

* Update dependencies

* Add embedding backend

* Add pooling sub module; Update pyproject.toml with dependency info

* Remove backend factory; Address review comments

* Add API docs generation workflow

* Add additional tests

* Update order to 185 for API docs

* Update integrations/optimum/pydoc/config.yml

Co-authored-by: Daria Fokina <daria.f93@gmail.com>

---------

Co-authored-by: Daria Fokina <daria.f93@gmail.com>

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -84,6 +84,11 @@ integration:opensearch:
       - any-glob-to-any-file: "integrations/opensearch/**/*"
       - any-glob-to-any-file: ".github/workflows/opensearch.yml"
 
+integration:optimum:
+  - changed-files:
+      - any-glob-to-any-file: "integrations/optimum/**/*"
+      - any-glob-to-any-file: ".github/workflows/optimum.yml"
+
 integration:pgvector:
   - changed-files:
       - any-glob-to-any-file: "integrations/pgvector/**/*"
