pinning updtrain version

--- a/integrations/uptrain/pyproject.toml
+++ b/integrations/uptrain/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
 ]
 dependencies = [
   "haystack-ai>=2.0.0b6",
-  "uptrain>=0.5",
+  "uptrain==0.5.0",
   "nest_asyncio",
   "litellm",
 ]
