--- a/integrations/amazon_bedrock/pydoc/config.yml
+++ b/integrations/amazon_bedrock/pydoc/config.yml
@@ -6,6 +6,9 @@ loaders:
       "haystack_integrations.components.generators.amazon_bedrock.adapters",
       "haystack_integrations.common.amazon_bedrock.errors",
       "haystack_integrations.components.generators.amazon_bedrock.handlers",
+      "haystack_integrations.components.generators.amazon_bedrock.chat.chat_generator",
+      "haystack_integrations.components.embedders.amazon_bedrock.text_embedder",
+      "haystack_integrations.components.embedders.amazon_bedrock.document_embedder",
     ]
     ignore_when_discovered: ["__init__"]
 processors:
