--- a/integrations/ollama/pydoc/config.yml
+++ b/integrations/ollama/pydoc/config.yml
@@ -3,7 +3,9 @@ loaders:
     search_path: [../src]
     modules: [
       "haystack_integrations.components.generators.ollama.generator",
-      "haystack_integrations.components.generators.ollama.chat.chat_generator"
+      "haystack_integrations.components.generators.ollama.chat.chat_generator",
+      "haystack_integrations.components.embedders.ollama.document_embedder",
+      "haystack_integrations.components.embedders.ollama.text_embedder",
     ]
     ignore_when_discovered: ["__init__"]
 processors:
