--- a/integrations/chroma/pyproject.toml
+++ b/integrations/chroma/pyproject.toml
@@ -189,6 +189,7 @@ module = [
   "chromadb.*",
   "haystack.*",
   "haystack_integrations.*",
-  "pytest.*"
+  "pytest.*",
+  "numpy.*"
 ]
 ignore_missing_imports = true
