--- a/.github/workflows/chroma.yml
+++ b/.github/workflows/chroma.yml
@@ -30,7 +30,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.9', '3.10']
+        python-version: ['3.8', '3.9', '3.10']
 
     steps:
     - name: Support longpaths
