--- a/integrations/nvidia/pyproject.toml
+++ b/integrations/nvidia/pyproject.toml
@@ -116,6 +116,7 @@ unfixable = [
   # Don't touch unused imports
   "F401",
 ]
+extend-exclude = ["tests", "example"]
 
 [tool.ruff.isort]
 known-first-party = ["src"]
