--- a/.github/workflows/ollama.yml
+++ b/.github/workflows/ollama.yml
@@ -33,15 +33,17 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         python-version: ["3.9","3.10","3.11"]
-    services:
-      ollama:
-        image: ollama/ollama:latest
-        options: --name ollama
-        ports:
-          - 11434:11434
         
     steps:   
       - uses: actions/checkout@v4
+
+      - name: Install Ollama and pull the required models
+        run: |
+          curl -fsSL https://ollama.com/install.sh | sh
+          ollama serve &
+          sleep 10
+          ollama pull ${{ env.LLM_FOR_TESTS }}
+          ollama pull ${{ env.EMBEDDER_FOR_TESTS }}
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
@@ -54,12 +56,6 @@ jobs:
       - name: Lint
         if: matrix.python-version == '3.9'
         run: hatch run lint:all
-
-      - name: Pull the LLM in the Ollama service
-        run: docker exec ollama ollama pull ${{ env.LLM_FOR_TESTS }}    
-
-      - name: Pull the Embedding Model in the Ollama service
-        run: docker exec ollama ollama pull ${{ env.EMBEDDER_FOR_TESTS }}
 
       - name: Generate docs
         if: matrix.python-version == '3.9' && runner.os == 'Linux'
