--- a/integrations/optimum/pydoc/config.yml
+++ b/integrations/optimum/pydoc/config.yml
@@ -27,6 +27,7 @@ renderer:
   order: 185
   markdown:
     descriptive_class_title: false
+    classdef_code_block: false
     descriptive_module_title: true
     add_method_class_prefix: true
     add_member_class_prefix: false
