adapt region for bedrock tests

--- a/.github/workflows/amazon_bedrock.yml
+++ b/.github/workflows/amazon_bedrock.yml
@@ -25,7 +25,7 @@ permissions:
 env:
   PYTHONUNBUFFERED: "1"
   FORCE_COLOR: "1"
-  AWS_REGION: eu-central-1
+  AWS_REGION: us-east-1
 
 jobs:
   run:
