feat: AmazonBedrockChatGenerator - migrate Anthropic chat models to use messaging API (#545)
* Migrate Claude to messaging API
---------

Co-authored-by: Paul Steppacher <p.steppacher91@gmail.com>

--- a/.github/workflows/amazon_bedrock.yml
+++ b/.github/workflows/amazon_bedrock.yml
@@ -18,9 +18,14 @@ concurrency:
   group: amazon-bedrock-${{ github.head_ref }}
   cancel-in-progress: true
 
+permissions:
+  id-token: write
+  contents: read
+
 env:
   PYTHONUNBUFFERED: "1"
   FORCE_COLOR: "1"
+  AWS_REGION: us-east-1
 
 jobs:
   run:
@@ -55,6 +60,12 @@ jobs:
       - name: Generate docs
         if: matrix.python-version == '3.9' && runner.os == 'Linux'
         run: hatch run docs
+
+      - name: AWS authentication
+        uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502
+        with:
+          aws-region: ${{ env.AWS_REGION }}
+          role-to-assume: ${{ secrets.AWS_CI_ROLE_ARN }}
 
       - name: Run tests
         run: hatch run cov
