--- a/.github/workflows/fastembed.yml
+++ b/.github/workflows/fastembed.yml
@@ -44,27 +44,16 @@ jobs:
       - name: Run tests
         run: hatch run cov
 
-      - name: Calculate alert data
-        id: calculator
-        shell: bash
-        if: (success() || failure())
-        run: |
-          if [ "${{ job.status }}" = "success" ]; then
-            echo "alert_type=success" >> "$GITHUB_OUTPUT";
-          else
-            echo "alert_type=error" >> "$GITHUB_OUTPUT";
-          fi
-
-      - name: Send event to Datadog
-        if: (success() || failure())
+      - name: Send failure event to Datadog
+        if: failure()
         uses: masci/datadog@v1
         with:
           api-key: ${{ secrets.CORE_DATADOG_API_KEY }}
           api-url: https://api.datadoghq.eu
           events: |
-            - title: "${{ github.workflow }} workflow"
+            - title: "core-integrations nightly failure: ${{ github.workflow }}"
               text: "Job ${{ github.job }} in branch ${{ github.ref_name }}"
-              alert_type: "${{ steps.calculator.outputs.alert_type }}"
+              alert_type: "error"
               source_type_name: "Github"
               host: ${{ github.repository_owner }}
               tags:
