--- a/.github/workflows/astra.yml
+++ b/.github/workflows/astra.yml
@@ -62,3 +62,10 @@ jobs:
         ASTRA_DB_API_ENDPOINT: ${{ secrets.ASTRA_API_ENDPOINT }}
         ASTRA_DB_APPLICATION_TOKEN: ${{ secrets.ASTRA_TOKEN }}
       run: hatch run cov
+
+    - name: Send event to Datadog for nightly failures
+      if: github.event_name == 'schedule' && failure()
+      uses: ./.github/actions/send_failure
+      with:
+        title: "core-integrations nightly failure: ${{ github.workflow }}"
+        api-key: ${{ secrets.CORE_DATADOG_API_KEY }}
