--- a/.github/workflows/fastembed.yml
+++ b/.github/workflows/fastembed.yml
@@ -44,10 +44,9 @@ jobs:
       - name: Run tests
         run: hatch run cov
 
-      - name: Send failure event to Datadog
-        # we want to send a failure event to Datadog and notify the team
-        # only if the job fails during scheduled nightly runs
-        if: failure() #github.event_name == 'schedule' &&
+      - name: Send event to Datadog for nightly failures
+        if: failure() #github.event_name == 'schedule' && 
         uses: ./.github/actions/send_failure
         with:
+          title: "core-integrations nightly failure: ${{ github.workflow }}"
           api-key: ${{ secrets.CORE_DATADOG_API_KEY }}          
