--- a/.github/workflows/opensearch.yml
+++ b/.github/workflows/opensearch.yml
@@ -57,3 +57,10 @@ jobs:
       - name: Run tests
         working-directory: integrations/opensearch
         run: hatch run cov
+
+      - name: Send event to Datadog for nightly failures
+        if: github.event_name == 'schedule' && failure()
+        uses: ./.github/actions/send_failure
+        with:
+          title: "core-integrations nightly failure: ${{ github.workflow }}"
+          api-key: ${{ secrets.CORE_DATADOG_API_KEY }}
