Notify nightly failures (#577)
* first refactorings

* separate unit tests in pgvector

* small change to weaviate

* fix format

* wip

* retry

* try failur

* restrict

* retry

* try using composite action

* retry composite action

* fix typo

* update all workflows

* retry

* fix test

* fix

--- a/.github/workflows/fastembed.yml
+++ b/.github/workflows/fastembed.yml
@@ -43,3 +43,10 @@ jobs:
 
       - name: Run tests
         run: hatch run cov
+
+      - name: Send event to Datadog for nightly failures
+        if: failure() #github.event_name == 'schedule' && 
+        uses: ./.github/actions/send_failure
+        with:
+          title: "core-integrations nightly failure: ${{ github.workflow }}"
+          api-key: ${{ secrets.CORE_DATADOG_API_KEY }}          
