--- a/.github/workflows/amazon_sagemaker.yml
+++ b/.github/workflows/amazon_sagemaker.yml
@@ -57,4 +57,25 @@ jobs:
         run: hatch run docs        
 
       - name: Run tests
+        id: tests
         run: hatch run cov
+
+      - name: Nightly - run unit tests with Haystack main branch
+        if: github.event_name == 'schedule'
+        id: nightly-haystack-main
+        run: |
+          hatch run pip install git+https://github.com/deepset-ai/haystack.git
+          hatch run test -m "not integration"
+      
+      - name: Send event to Datadog for failures
+        if: failure() && github.event_name == 'schedule' (steps.tests.conclusion == 'failure' || steps.nightly-haystack-main.conclusion == 'failure')
+        uses: ./.github/actions/send_failure
+        with:
+          title: |
+            ${{ if steps.nightly-tests.conclusion == 'failure' }}
+            core-integrations nightly failure with Haystack main branch
+            ${{ else }}
+            core-integrations nightly failure
+            ${{ endif }}
+            : ${{ github.workflow }}
+          api-key: ${{ secrets.CORE_DATADOG_API_KEY }}
